# CubeShading

./: CMakeLists.txt  CubeShading.sln  README.md
CubeShading/: CubeShading.vcxproj  CubeShading.vcxproj.filters  main.cpp  obj.h  obj.hpp  vectFunctions.h
